fixed css positioning issue causing images and buttons on listing panels to overlap the nav menu

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -80,6 +80,7 @@
   flex-direction: column;
   position: fixed;
   overflow: hidden;
+  z-index: 10 !important;
 }
 #login {
   display: flex;
