--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -31,6 +31,7 @@
 }
 
 .image {
+  position: relative;
   display: flex !important;
-  z-index: 8 !important;
+  z-index: 1 !important;
 }
